added LogicInterpreter
added LogicInterpreter, testing still has to be done